# aisync

./: .dockerignore  .gitignore  Makefile  README.md  cli.py  diff.txt  dump.rdb  play_pgvector.py  pyproject.toml  requirements.txt  test.py
core/: settings.py
core/cache/: cache_manager.py
core/db/: __init__.py  session.py  transactional.py  utils.py
core/fastapi/middlewares/: sqlalchemy.py
core/logger/: log_engine.py
core/repository/: base.py
core/robot/: cli.py
core/robot/aisync/: __init__.py  cli.py  log.py  utils.py
core/utils/: __init__.py  decorators.py  dicts.py  external_service.py
docker/: Dockerfile  compose.yml  docker-compose.yml
docker/monitoring/prommetheus/: prometheus.yml
initdb/postgres/: 00_init.sql
machine/: server.py
machine/api/: __init__.py
machine/api/robot/: __init__.py  embedder.py  (+1 more)
machine/models/: __init__.py  chat_input.py  chat_output.py  chatting.py  doc_collection.py  query_logs.py  response_logs.py  tool_collection.py
machine/robot/: README.md  cli.py  manager.py  suit.py  utils.py
migrations/: env.py
migrations/versions/: 0ee7ecf8f55e_create_key_identifier_for_doc_collection.py  3e43ee84444c_add_document_name_for_document_.py  5298a2bc1668_setup_document_table.py  84f964683c82_index_embedding_table_doc_collection.py  d1dc7afed44d_create_table_tool_collection.py  ec637a108242_setup_response_and_query_table.py
test_clis/: hello.py  math.py  sum.py
tmp/gym_automation/: hooks.py  prompts.py
tmp/gym_automation_llama_3_1/: hooks.py
tmp/mark_ii_4all/: hooks.py  tools.py
tmp/rockship_chatbot/: hooks.py
(+174 files in other folders)
