[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aisync-mono-repo"
version = "0.0.1"
description = "AISync mono-repo"
authors = ["loctvl842 <loclepnvx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aisync = { path = "packages/core", develop = true }
aisync-dev = { path = "packages/dev", develop = true }
aisync-cli = { path = "packages/cli", develop = true }
aisync-api = { path = "packages/api", develop = true }

[tool.poetry.group.format.dependencies]
black = "^24.10.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.7.2"
