[project]
name = "aisync-monorepo"
version = "0.0.1"
description = "AISync mono-repo"
authors = [{ name = "loctvl842", email = "loclepnvx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.sources]
aisync = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.setuptools]
packages = ["aisync_cli"]
